# raynaldo

./: .gitignore  Cargo.toml  README.md  TODO.norg
.github/workflows/: rust.yml
assets/: skybox.glb
assets/magujo/: magujo-big.glb  suzanne.glb
src/: camera.rs  color.rs  common.rs  configs.rs  consts.rs  cornell.rs  main.rs  mesh.rs  ray.rs  renderer.rs  tonemap.rs
src/geometry/: material.rs  mod.rs  sphere.rs  storage.rs
src/raytracer/: embree.rs  mod.rs
