[package]
name = "raynaldo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bevy_color = "0.15.4"
bevy_math = "0.15.3"
bevy_transform = { version = "0.15.3", default-features = false } # no need for bevy support
embree4-rs = { git = "https://github.com/ivsop/embree4-rs/", rev = "9317565638f6e25a592e3e42f26033bf203bd0b8" }
embree4-sys = "0.0.12"
fastrand = "2.3.0"
fxhash = "0.2.1"
gltf = "1.4.1"
image = "0.25.5"
rayon = "1.10.0"

[profile.release]
debug = true
