[package]
name = "raynaldo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
embree4-rs = { git = "https://github.com/ivsop/embree4-rs/", rev = "4bdff10b6504154077c2552451ba1c9268ad5a9a" }
embree4-sys = "0.0.12"
fastrand = "2.3.0"
fxhash = "0.2.1"
glam = "0.30.1"
gltf = "1.4.1"
image = "0.25.5"
rayon = "1.10.0"

[profile.release]
debug = true
